la fourchette exercice on restaurant with 2 models nested routes and a little bit of CSS

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,18 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <!-- Add these line for detecting device width -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   </head>
 
   <body>
-    <%= yield %>
+    <div class="navbar-wagon navbar-wagon-fixed">
+      <%= link_to 'La Fourchette', restaurants_path, class: 'text-navbar' %>
+      <%= link_to 'Add New Restaurant', new_restaurant_path, class: 'btn btn-vale' %>
+    </div>
+    <div class="container marged-for-navbar">
+      <%= yield %>
+    </div>
   </body>
 </html>
