just the principle of the link in the card and not an the title of the card

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -6,7 +6,8 @@
   <div class="row">
     <% @restaurants.each do |restaurant| %>
           <div class="col-xs-12 col-sm-4">
-            <div class="card-restaurant" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= restaurant.image_url %>');">
+            <div class="card-restaurant" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= image_path(restaurant.image_url) %>');">
+              <%= link_to '', '', cll  %>
               <h3 class="card-description">
                 <%= link_to restaurant.name, restaurant %>
               </h3>
